<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/calculator_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_history"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        tools:listitem="@layout/item_calculation_history"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"/>

    <TextView
        android:id="@+id/tv_calculation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:hint="@string/enter_numbers"
        android:textColorHint="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_remove_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:src="@drawable/ic_remove"
                android:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_division"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:src="@drawable/ic_division"
                android:tint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_number_7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:text="@string/number_7"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_number_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:text="@string/number_8"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_number_9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:text="@string/number_9"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_multiplication"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:src="@drawable/ic_close"
                android:tint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_number_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:text="@string/number_4"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_number_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:text="@string/number_5"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_number_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:text="@string/number_6"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_remove"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:src="@drawable/ic_remove_number"
                android:tint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_number_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:text="@string/number_1"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_number_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:text="@string/number_2"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_number_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:text="@string/number_3"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:src="@drawable/ic_add"
                android:tint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:text=""
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_number_0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:text="@string/number_0"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_comma"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:text="@string/comma"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_equals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_shape"
                android:src="@drawable/ic_equals"
                android:tint="@color/white" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>